force-app/main/default/objects/ssot__PersonName__dlm/fields/ssot__EndEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__EndEffectiveDate__c</fullName>
    <label>End Effective Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EndEffectiveDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>