force-app/main/default/objects/ssot__PersonName__dlm/fields/ssot__IsPrimary__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsPrimary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsPrimary</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>