force-app/main/default/objects/ssot__PersonName__dlm/fields/ssot__NameUsageType__c.field-meta.xml
<CustomField>
    <fullName>ssot__NameUsageType__c</fullName>
    <label>Name Usage Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>NameUsageType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>