force-app/main/default/objects/ssot__PersonName__dlm/fields/ssot__rel_1716726630656_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716726630656_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PersonName_IndividualId_map_Individu_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>PersonName_IndividualId_map_Individu_rel</relationshipLabel>
    <relationshipName>rel_1716726630656_end</relationshipName>
    <type>Lookup</type>
</CustomField>